# AI-companion-backend

./: .env.example  Cargo.toml
config/: filesystem_settings.json
migrations/: 0001_create_schedules.sql  0002_create_ledger_entries.sql
src/: config.rs  main.rs
src/ai/: chat_service.rs  client.rs  file_content_edit_tools.rs  file_create_tools.rs  file_delete_tools.rs  file_open_tools.rs  file_rename_tools.rs  file_search_tools.rs  file_transfer_tools.rs  intent.rs  mod.rs  prompt.rs  router.rs  schedule_tools.rs  speech_sanitizer.rs  stt.rs  tools.rs  tts.rs
src/api/: chat.rs  mod.rs
src/db/: ledger.rs  mod.rs  schedules.rs
src/files/: candidates.rs  content_edit.rs  create.rs  delete.rs  everything.rs  mod.rs  opener.rs  permission.rs  rename.rs  security.rs  settings.rs  transfer.rs
src/models/: chat.rs  files.rs  filesystem.rs  ledger.rs  mod.rs  schedule.rs  stt.rs
src/routes/: chat.rs  files.rs  filesystem.rs  ledger.rs  mod.rs  schedules.rs  status.rs  stt.rs
